# polymarket-rs-sdk

./: .gitattributes  Cargo.toml  README.md  README.zh-CN.md
builder-relayer-client-rust/: Cargo.toml  README.md  README.zh-CN.md
builder-relayer-client-rust/examples/: EXAMPLES_NOTE.md  README.md  approve_tokens.rs  builder_auth_execute.rs  client_execute.rs  client_get_transactions.rs  client_poll.rs  ctf_operations.rs  deploy_safe.rs  deploy_safe_create.rs  monitor_transactions.rs  multisend_batch.rs  quick_start.rs  relayer_client_demo.rs
builder-relayer-client-rust/src/: client.rs  endpoints.rs  errors.rs  lib.rs  signer.rs  types.rs  utils.rs
builder-relayer-client-rust/src/builder/: create.rs  derive.rs  mod.rs  safe.rs
builder-relayer-client-rust/src/encode/: safe.rs
builder_signing_sdk_rs/: Cargo.toml  README.md
builder_signing_sdk_rs/src/: lib.rs
clob-client-rust/: Cargo.toml  README.md  README_CN.md
clob-client-rust/examples/: balance_allowance.rs  cancel_all.rs  cancel_order.rs  cancel_orders.rs  compare_signing.rs  create_and_post_market_order.rs  create_and_post_order.rs  create_api_key.rs  derive_api_key.rs  get_api_keys.rs  get_markets.rs  get_notifications.rs  get_open_orders.rs  get_order.rs  get_order_book.rs  get_prices.rs  get_trades.rs  limit_buy_demo.rs  limit_sell_demo.rs  market_buy_demo.rs  market_buy_order.rs  market_sell_demo.rs  market_sell_order.rs  order_types_demo.rs  post_order.rs  query_orders_demo.rs  rewards.rs  scoring.rs  sign_order.rs  signature_types_demo.rs  test_address_case.rs
clob-client-rust/src/: client.rs  constants.rs  endpoints.rs  errors.rs  exchange_consts.rs  exchange_order_builder.rs  headers.rs  http_helpers.rs  lib.rs  order_builder.rs  signer_adapter.rs  signing.rs  types.rs  utilities.rs
order_utils_rs/: Cargo.toml  README.md
order_utils_rs/src/: lib.rs
