[package]
name = "builder-relayer-client-rust"
version = "0.1.0"
edition = "2021"
description = "Builder + Relayer client utilities: build, sign and submit transactions for Gnosis Safe/Builder workflows used by Polymarket."
license = "MIT OR Apache-2.0"
repository = "https://github.com/imangoMah/polymarket-rs-sdk"
readme = "README.md"
keywords = ["polymarket", "builder", "relayer", "safe", "eip712"]
categories = ["cryptography", "development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json", "native-tls"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
hex = "0.4"
ethers = "2.0"
sha3 = "0.10"
builder_signing_sdk_rs = "0.1.0"

[dev-dependencies]
httpmock = "0.6"
base64 = "0.21"
