[package]
name = "builder_signing_sdk_rs"
version = "0.1.0"
edition = "2024"
description = "Small signing utilities for Builder API auth and EIP-712 helpers used by Polymarket clients."
license = "MIT OR Apache-2.0"
repository = "https://github.com/imangoMah/polymarket-rs-sdk"
readme = "README.md"
keywords = ["signing", "eip712", "builder", "hmac", "sdk"]
categories = ["cryptography"]

[dependencies]
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
time = { version = "0.3", features = ["formatting"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
