[package]
name = "clob-client-rust"
version = "0.1.0"
edition = "2024"
description = "Polymarket CLOB client ported to Rust: build, sign and submit orders; helper utilities."
license = "MIT OR Apache-2.0"
repository = "https://github.com/imangoMah/polymarket-rs-sdk"
readme = "README.md"
keywords = ["polymarket", "clob", "orders", "eip712", "signing"]
categories = ["development-tools", "cryptography"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json", "native-tls"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
sha1 = "0.10"
hex = "0.4"
async-trait = "0.1"
ethers = "2.0"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
eip712 = "0.1"
rand = "0.8"
rust_decimal = "1.0"
tokio-native-tls = "0.3"
builder_signing_sdk_rs = "0.1.0"

[dev-dependencies]
httpmock = "0.6"
