[package]
name = "order_utils_rs"
version = "0.1.0"
edition = "2024"
description = "Utility helpers for order construction/normalization used by Polymarket Rust SDK."
license = "MIT OR Apache-2.0"
repository = "https://github.com/imangoMah/polymarket-rs-sdk"
readme = "README.md"
keywords = ["orders", "utils", "sdk"]
categories = ["development-tools"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
